Mejora general del JavaDoc y de la visibilidad de las clases
git-svn-id: http://svn-ctt.administracionelectronica.gob.es/svn/clienteafirma/projects/cliente-afirma/trunk@5316 dcdbb401-323c-49cf-88a0-803402807c85